Revert "Revert "replaced pathfinding arraylist with linkedlist for big speed boost""
This reverts commit 775611370e65ead34eeb7834c67ab203faf5af64.